# fastapi-chat-app

chat-app/: pyproject.toml
chat-app/src/chat_app/: main.py
